--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <LinearLayout
         android:id="@+id/search"
@@ -37,7 +39,67 @@
             android:layout_marginLeft="10dp"
             android:background="#007CFF"
             android:src="@mipmap/search_button"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
+
+    </LinearLayout>
+    
+    <LinearLayout
+        android:id="@+id/filters"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@id/search"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
+
+        <LinearLayout
+            android:id="@+id/sortFilter"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sort : "
+                android:gravity="start"
+                android:textStyle="bold"
+                android:layout_weight="1"/>
+
+            <Spinner
+                android:id="@+id/sort"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textAlignment="center"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/orderFilter"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Order : "
+                android:gravity="start"
+                android:textStyle="bold"
+                android:layout_weight="1"/>
+
+            <Spinner
+                android:id="@+id/order"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textAlignment="center"
+                android:layout_weight="1"/>
+
+        </LinearLayout>
+        
 
     </LinearLayout>
 
@@ -45,7 +107,7 @@
         android:id="@+id/results"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/search" />
+        android:layout_below="@id/filters" />
 
     <TextView
         android:id="@+id/empty"
@@ -54,8 +116,10 @@
         android:layout_below="@id/results"
         android:layout_marginTop="8dp"
         android:gravity="center"
-        android:text="Nothing to Show."
-        android:textSize="40sp" />
+        android:text="@string/nothing_to_show"
+        android:textSize="40sp">
+        <requestFocus />
+    </TextView>
 
 
 </RelativeLayout>
