--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -17,7 +18,7 @@
             android:id="@+id/qTitle"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="Get GitHub account using StackExchange API"
+            android:text="@string/qTitleDemo"
             android:gravity="start"
             android:textStyle="bold"
             android:padding="5dp"
@@ -47,7 +48,7 @@
                 android:layout_height="match_parent"
                 android:layout_below="@id/req_header"
                 android:gravity="start"
-                android:text="I am trying to use the **StackExchange API** to retrieve"
+                android:text="@string/qBodyDemo"
                 android:layout_margin="10dp"
                 android:paddingRight="40dp"
                 android:textSize="15sp"
@@ -76,16 +77,19 @@
             android:background="@color/postBG">
 
             <TextView
-                android:id="@+id/num_ans"
-                android:layout_width="75dp"
+                android:id="@+id/num_votes"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_below="@id/req_header"
-                android:gravity="center"
-                android:text="Answers : 3"
                 android:layout_margin="10dp"
-                android:paddingRight="20dp"
                 android:layout_weight="1"
-                android:textSize="20sp"/>
+                android:autoText="false"
+                android:gravity="center"
+                android:paddingRight="20dp"
+
+                android:text="@string/votes_demo"
+                android:textSize="20sp" />
+
+
         </LinearLayout>
 
         <LinearLayout
@@ -97,15 +101,15 @@
             android:background="@color/postBG">
 
             <TextView
-                android:id="@+id/tags"
-                android:layout_width="36dp"
+                android:id="@+id/num_ans"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_below="@id/req_header"
-                android:gravity="center_vertical|start"
-                android:text="Tags : "
+                android:gravity="center"
+                android:text="@string/answerDemo"
                 android:layout_margin="10dp"
-                android:layout_weight="2"
-                android:textSize="15sp"/>
+                android:paddingRight="20dp"
+                android:layout_weight="1"
+                android:textSize="20sp"/>
 
         </LinearLayout>
 
@@ -125,20 +129,24 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/num_votes"
-                android:layout_width="0dp"
+                android:id="@+id/tags"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:paddingRight="20dp"
-                android:text="Votes : 2"
-                android:textSize="20sp" />
+                android:gravity="center_vertical"
+                android:paddingRight="5dp"
+                android:paddingLeft="10dp"
+                android:text="@string/tagsDemo"
+                android:maxLines="3"
+                android:ellipsize="end"
+                android:textStyle="bold"
+                android:textColor="@color/colorAccent"
+                android:textSize="14sp" />
 
         </LinearLayout>
 
@@ -173,7 +181,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:paddingTop="2dp"
-                    android:text="Username"
+                    android:text="@string/usernameDemo"
                     android:textAlignment="textStart"
                     android:ellipsize="end"
                     android:maxLines="2"
@@ -184,7 +192,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Reputation"
+                    android:text="@string/reputationDemo"
                     android:textAlignment="textStart"
                     android:textStyle="bold"
                     android:textSize="14sp" />
@@ -219,12 +227,13 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_gravity="center_vertical">
+
             <TextView
                 android:id="@+id/views"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColorHighlight="@color/colorAccent"
-                android:text="Views : 1012" />
+                android:text="@string/viewDemo" />
 
         </LinearLayout>
 
@@ -238,15 +247,13 @@
                 android:id="@+id/dateCreated"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="asked Dec 4'17"
+                android:text="@string/creationDemo"
                 android:layout_gravity="end"
                 android:gravity="end"/>
 
         </LinearLayout>
 
     </LinearLayout>
-
-
 
 
 </RelativeLayout>
